--- a/coba_form.html
+++ b/coba_form.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Form Sederhana</title>
-        <link rel="icon" type="img/png" href="gambar/icon.png" sizes="16x16"/>
+        <link rel="icon" type="icon/png" href="gambar/icon.png" sizes="16x16"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
@@ -16,6 +16,6 @@
             <input type="reset" value="Reset">
         </form>
         <p>Jika Anda mengklik tombol "Kirim", data formulir akan dikirim ke halaman bernama "/action_page.php".</p>
-        <p>JI</p>
+        <p>Dapat mengisi nama depan dan belakang, jika di klik kirim makan akan masuk ke halaman /action_page.php, dan terdapat button reset untuk menghapus isi.</p>
     </body>
 </html>
